client/src/components/Footer.css
.footer {
  font-family: "Mona Sans", sans-serif;
  display: flex;
  flex-direction: column;
  background-color: #000;
  color: #fdfdfd;
}
.plus {
  font-size: 200px;
  font-weight: 900;
}
.informations {
  display: flex;
  flex-direction: row;
  color: #f77908;
  justify-content: flex-start;
  align-items: center;
  font-family: "Supreme-spike", sans-serif;
  font-size: 2.5rem;
}
.informationsData {
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: start;
}
.styleGroup {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: baseline;
  margin-block: 1rem;
  margin-left: 1rem;
  line-height: 1.8rem;
}
.numbers {
  font-size: 48px;
  font-weight: 900;
}
.informationsSub {
  font-size: 24px;
  font-weight: 900;
}
.browsed {
  display: flex;
  flex-direction: column;
  align-items: baseline;
}
.browsedSub {
  letter-spacing: 0.6rem;
}
.adventurers {
  display: flex;
  flex-direction: column;
  align-items: baseline;
}
.brand {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}
.brandCat {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 1rem 0;
  color: #fdfdfd;
}
.brandShipName {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #fdfdfd;
  width: 200px;
  font-size: 16px;
}

.serviceAndBrand {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  margin: 2rem 0;
}
.serviceCat,
.brandES {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: #fdfdfd;
}
.serviceName,
.ESName {
  text-align: center;
  color: #fdfdfd;
  font-size: 16px;
}
.newsletter {
  display: flex;
  align-content: center;
  justify-content: center;
  margin-top: 5rem;
  width: 100%;
}
.inputNewsletter {
  color: #fdfdfd;
  background-color: #000;
  width: 300px;
  border: none;
  border-bottom: 1px solid #fdfdfd;
  outline: none;
  font-size: 1rem;

  &::placeholder {
    color: #fdfdfd;
    opacity: 1;
  }
}
.logos {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 5rem 0;
  width: 100%;
}
.social {
  color: #fdfdfd;
  height: 30px;
  width: auto;
}

@media screen and (min-width: 768px) {
  .footer {
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 300px;
  }

  .logosAndNewsletter {
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-around;
    width: 22%;
    height: 100%;
  }
  .logos {
    width: 100%;
    justify-content: space-evenly;
    align-items: center;
    margin: 0;
  }
}

